syntax = "proto3";

package admin.v1;

import "google/api/annotations.proto";

option go_package = "admin/api/admin/v1;v1";

service Admin {
  // Register 注册账号
  rpc Register(RegisterRequest) returns (RegisterReply) {
    option (google.api.http) = {
      post: "/register"
      body: "*"
    };
  }

  // Login 登录账号
  rpc Login(LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/login"
      body: "*"
    };
  }

  // RefreshToken 刷新 AccessToken
  rpc Refresh(RefreshRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/refresh"
      body: "*"
    };
  }
}

message RegisterRequest {
  string username = 1;      // 用户名
  string password = 2;      // 密码
  string email = 3;         // 注册邮箱
  string email_code = 4;    // 邮箱验证码
}

message RegisterReply {
  string id = 1;            // 注册成功的用户ID
}

message LoginRequest {
  string username = 1;
  string password = 2;
  string v_code = 3;    // 行为验证码
}

message LoginReply {
  string access_token = 1;    // 用于认证的 Access Token
  string refresh_token = 2;   // 用于刷新 Access Token
  int64  exp = 3;             // 过期时间（秒）
}

message RefreshRequest {
  string refresh_token = 1;
}

